# ChangeLog for dev-util/rapidsvn
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.71 2010/06/22 20:04:56 arfrever Exp $

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rapidsvn-0.9.3.ebuild, rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6-r1.ebuild:
  net-misc/neon renamed to net-libs/neon.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rapidsvn-0.9.3.ebuild, rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6-r1.ebuild,
  rapidsvn-0.9.8.ebuild, rapidsvn-0.10.0.ebuild, rapidsvn-0.12.0.ebuild:
  dev-util/subversion renamed to dev-vcs/subversion.

  16 Feb 2010; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.6-r1.ebuild,
  rapidsvn-0.9.8.ebuild, rapidsvn-0.10.0.ebuild, rapidsvn-0.12.0.ebuild:
  Removed legacy code, moved checks to pkg_setup, and removed addpredict 
  in 4 latest ebuild versions. Closes bug #305325.

*rapidsvn-0.12.0 (13 Feb 2010)

  13 Feb 2010; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.12.0.ebuild:
  Updated to latest upstream release; closes bug #294740.

*rapidsvn-0.10.0 (12 Oct 2009)

  12 Oct 2009; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.10.0.ebuild:
  Updated to latest upstream release, closes bug #284730.  Re-enabled the
  neon dav support, but it needs testing (the serf dav support is smooth
  as the proverbial baby's butt...)

  01 Aug 2009; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.8.ebuild:
  Added work-around for doxygen sandbox violation (no bug, yet...) due to
  font diddling by latex.  No idea why generating one particular jpg file
  would cause this.

*rapidsvn-0.9.8 (06 Jun 2009)

  06 Jun 2009; Steve Arnold <nerdboy@gentoo.org>
  +files/rapidsvn-0.9.8-sar.patch, +rapidsvn-0.9.8.ebuild:
  Added new version, updated use=doc generation (closes bug #265941).  The
  underlying subversion neon support is dorked up (at least for me) so this