@@ -1,17 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX rapidsvn-0.9.8-sar.patch 955 RMD160 872c2307abee59bc2b2d63866b8d72ec81600e08 SHA1 0682da8f3dcd41019c780f749b1087ba22793311 SHA256 485eca96c9d393baffec28443eb7f32fe577d9a12533c0797ca61f67380c4b0e
 AUX rapidsvn-sar.patch 931 RMD160 ba28d6ccfd86553b4963d611593812db6005ae4c SHA1 175d1609f2e9cfb7f0f6e832ee168869760b442e SHA256 0690d1c3c516e32138225ca60c74a157632eab7358f5d8cbdd374f7b5d1c5782
 AUX rapidsvn-svncpp_link.patch 304 RMD160 3d2b6f48e46e3c5e39a499589043aa09de60d8c6 SHA1 9752592941c10d71f94680ff97e925fee66bc890 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968
 DIST rapidsvn-0.10.0-1.tar.gz 1243876 RMD160 238244d31c03485fb24c2b0fb3ada2b8ea9e5316 SHA1 bbac1027bcbf3130d4946fae874ee1177af764be SHA256 b818a9c762173106f7e0e21316e49d0f65983c58e8ba9c2db3fad873f7985e28
 DIST rapidsvn-0.12.0-1.tar.gz 1246675 RMD160 2c6e28f5b3a6450cfb8a749fc27490877ccdfa40 SHA1 b25820ee98517b2b070c9b5a3a18463607799081 SHA256 ef7d0db528ba5c660f8e8ce4dd7b6d098707b43b04932257e092a6d4ab746ac4
-DIST rapidsvn-0.9.3.tar.gz 998268 RMD160 316904503ab1a067fb14b0567d6e28bc2a6ad6c5 SHA1 71a57ffb4f7944191df51c4a2a87f1c971567543 SHA256 90363935f9a1cb3177d045679db39c94ee44ffc3d67ed63570900ca64771f139
-DIST rapidsvn-0.9.4.tar.gz 1057482 RMD160 edbabab261b69acc78a2009f2da175b2b70c8987 SHA1 0f8eff53964f641253d6a4be82187ab9f30168c7 SHA256 20c6a17ed91171bae6c3af7b611b0f91395cb2962fc0cfe1d66dfd5178d60651
 DIST rapidsvn-0.9.6.tar.gz 1205771 RMD160 060a66d3f268f9a4018f01a9541df2a3394ed7b8 SHA1 266f846437e3bbce1707799ec0d95c2d1be43b4a SHA256 4e026b0e7a56b2a0ba4cd12b1ee224c8d0645e98eb5b682078220f912513b36d
 DIST rapidsvn-0.9.8.tar.gz 1212108 RMD160 a1614daff3631536c3eb0a14c279f0581b257fbf SHA1 22d145d2d686841da100d45789a663c70e325a3c SHA256 9af7462559d8a600a1b54ac19a79c111691818969e193a06080c9d9306b32b13
 EBUILD rapidsvn-0.10.0.ebuild 2835 RMD160 dbb2f0df7e9e92d36868edd389b56996469beb10 SHA1 60708913e8efa4cf3ec3ae08aa9cf3385b221c1a SHA256 48ef3be365094c405227d29da0ed1522548da9b953d414ff83dfdd1b8ca515b8
 EBUILD rapidsvn-0.12.0.ebuild 2751 RMD160 e0bf874bdd313b64d1681e564f2e1e432abe8851 SHA1 2380067c379807e27a174302b9cb1ba9b3ba6d4e SHA256 d3a2d390b1a8bc5fc847cd0d6efc6b6dd4afe5fdd0382d1ebb5fd5e8d0c26a3d
-EBUILD rapidsvn-0.9.3.ebuild 3088 RMD160 8412c318ac8d9759825e52cab3dcfde3e55f926e SHA1 2cbaf26998731789d1949eea1e8d352891f92a12 SHA256 d36ecc6d2ab45f53b32970257fbf84aa026719cb2e7bf13d6517c3132cd51fa7
-EBUILD rapidsvn-0.9.4.ebuild 3069 RMD160 e92d4861c2f248385cf282c1229724f335eeae80 SHA1 40a65820061ec16354e00ba53f5ec2b19e059980 SHA256 711843e3d6cb6f5f239015cccbef1b07473bf7f382aeb386157fa9bea012ee65
 EBUILD rapidsvn-0.9.6-r1.ebuild 3172 RMD160 1d74ba79239af03a2683a2e0b47497c99fc6303e SHA1 104cb64ce463b41dded53275d45033ebab66ebde SHA256 31377b1d9f0db940aa1943394576cb5458aebb8cf51875ce0b8561f9d646e11d
 EBUILD rapidsvn-0.9.8.ebuild 3003 RMD160 e568a9f264f10edaf142661a86af2a58cc6cafad SHA1 996c7639b743379b1300f51389d71343692c85ab SHA256 0bb164be2174970bf219082684dab0000dd81e63c71d573b70ee647c3c8c9fbe
-MISC ChangeLog 12049 RMD160 b56d7395cf5c4148b274d8eeb62106c599148142 SHA1 1ce3bf11472a2cf8fe5e688df90e1fcf5d79e6cc SHA256 3d61ed2b795f8b65a5d128fbf0cc9ff83a2733230bdb521aadd3e985e5087a46
+MISC ChangeLog 12193 RMD160 1461cef19881be91da1e14c1caabaed3db1b8a7a SHA1 7785c7ec63f7f9979dd0fee6c4046cf0fddf05a1 SHA256 ab42e6b281c6597aff6b6971887f0e36a64b127e305fb0685a3eef8f6707de9f
 MISC metadata.xml 518 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b SHA1 6b9c6a8c99c7dd184cf048b4e306f0a0e5f81788 SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkyBs4UACgkQiqiDRvmkBmIvwwCfUemot+VNILfFcb+PVr40a6M0
+wnUAoLxRPZG+ZNOKJj3bDqG0MiJ9qsp9
+=hXcx
+-----END PGP SIGNATURE-----
