@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/rapidsvn
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.71 2010/06/22 20:04:56 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.72 2010/09/04 02:44:15 dirtyepic Exp $
+
+  04 Sep 2010; Ryan Hill <dirtyepic@gentoo.org> -rapidsvn-0.9.3.ebuild,
+  -rapidsvn-0.9.4.ebuild:
+  Drop old versions depending on wxGTK-2.6.
 
   22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   rapidsvn-0.9.3.ebuild, rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6-r1.ebuild:
